[*] update swagger
