# api/docs/swagger.json
@@ -281,13 +281,13 @@
                 "tags": [
                     "urls"
                 ],
-                "summary": "Get ShortUrl",
+                "summary": "Get ShortUrlData",
                 "operationId": "get_short_url",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "short url hash",
-                        "name": "hash",
+                        "name": "short-url",
                         "in": "path",
                         "required": true
                     }
@@ -417,7 +417,7 @@
                     {
                         "type": "string",
                         "description": "short url hash",
-                        "name": "hash",
+                        "name": "short-url",
                         "in": "path",
                         "required": true
                     }
